--- a/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
+++ b/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
@@ -45,7 +45,7 @@
           <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
         </ng-container>
         <ng-container matColumnDef="Amount">
-          <th mat-header-cell *matHeaderCellDef title="LRI entry amount"> Donors </th>
+          <th mat-header-cell *matHeaderCellDef title="LRI entry amount"> Amount </th>
           <td mat-cell *matCellDef="let element"> {{element.Amount|currency:'USD':'symbol':'1.2-2'}} </td>
         </ng-container>
         <ng-container matColumnDef="ButtonControl">
