--- a/src/app/Utilities_Pages/LRI/lri-new/lri-new.component.scss
+++ b/src/app/Utilities_Pages/LRI/lri-new/lri-new.component.scss
@@ -81,3 +81,19 @@ ul{
     
 }
 
+
+.fileUrl{
+    margin-left: 10px;
+    width: 300px;
+}
+
+#exampleFormat{
+    text-decoration: underline;
+    font-size: 8pt;
+}
+
+@media screen and (max-width:$size-md){
+    #exampleImg{
+      width: 100%;
+    }
+  }
