--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -30,6 +30,7 @@
           <a class="dropdown-item" (click)="NavigateToNewWhitemail()">Add Whitemail</a>
           <a class="dropdown-item" (click)="NavigateToLRI()">Client LRI</a>
           <a class="dropdown-item" (click)="NavigateToNewLRI()">Add LRI</a>
+          <a class="dropdown-item" (click)="NavigateToIncidentals()">Client Incidentals</a>
           </div>
   
       </li>
