added caging calendar

--- a/src/app/Returns/Subviews/list-gross/list-gross.component.scss
+++ b/src/app/Returns/Subviews/list-gross/list-gross.component.scss
@@ -61,7 +61,7 @@ tr.mat-header-row{
 
   //Controls hover and selected for the rows
 tr.example-element-row:not(.example-expanded-row):hover {
-    background: #e3eff7;
+    background: $color-blue-highlight;
     td{
       .returnsExpCollBtn{
         background-color:$color-whitesmoke !important;
@@ -69,7 +69,7 @@ tr.example-element-row:not(.example-expanded-row):hover {
     }
   }
   tr.example-element-row:not(.example-expanded-row):active {
-    background: #e3eff7;
+    background: $color-blue-highlight;
     td{
       .returnsExpCollBtn{
         background-color:$color-whitesmoke !important;
