--- a/src/app/Utilities_Pages/LRI/lri-edit/lri-edit.component.scss
+++ b/src/app/Utilities_Pages/LRI/lri-edit/lri-edit.component.scss
@@ -1,5 +1,11 @@
 @import '~src/appTheme.scss'; 
 
+::ng-deep .readOnlyBox{
+    .mat-form-field-outline{
+        background-color: $color-gallery;
+        border-radius: 4px;
+    }
+}
 
 .mainInputBox{
     width: 100%;
