--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -31,6 +31,9 @@
           <a class="dropdown-item" (click)="NavigateToLRI()">Client LRI</a>
           <a class="dropdown-item" (click)="NavigateToNewLRI()">Add LRI</a>
           <a class="dropdown-item" (click)="NavigateToIncidentals()">Client Incidentals</a>
+          <a class="dropdown-item" (click)="NavigateToNewIncidentals()">Add Incidentals</a>
+          <a class="dropdown-item" (click)="NavigateToNewCaging()">Add Caging</a>
+          <a class="dropdown-item" (click)="NavigateToCagingCalendar()">Caging Calendar</a>
           </div>
   
       </li>
