--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -16,6 +16,7 @@ $color-dovegray: #686868; //box shadows
 $color-shark: #212529; //boostrap/native black for text
 $color-mineshaft: #333; //navigation bar
 $color-blue-default: #1279C0;
+$color-blue-highlight: #e3eff7;
 $color-blue-light: #59a1d3;
 $color-blue-dark: #0a5caa;
 
