--- a/src/app/Returns/Subviews/phase-gross/phase-gross.component.scss
+++ b/src/app/Returns/Subviews/phase-gross/phase-gross.component.scss
@@ -167,7 +167,7 @@ tr.mat-header-row{
 
   //Controls hover and selected for the rows
 tr.example-element-row:not(.example-expanded-row):hover {
-    background: #e3eff7;
+    background: $color-blue-highlight;
     td{
       .mailcodeButton{
         background-color:$color-whitesmoke !important;
@@ -176,7 +176,7 @@ tr.example-element-row:not(.example-expanded-row):hover {
   }
 
   tr.example-element-row:not(.example-expanded-row):active {
-    background: #e3eff7;
+    background: $color-blue-highlight;
     td{
       .mailcodeButton{
         background-color:$color-whitesmoke !important;
