--- a/src/app/Utilities_Pages/whitemail/whitemail-main/whitemail-main.component.html
+++ b/src/app/Utilities_Pages/whitemail/whitemail-main/whitemail-main.component.html
@@ -40,7 +40,7 @@
         </ng-container>
         <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef title="Donation Date"> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.DonationDate|date:'fullDate'}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.DateCaged|date:'fullDate'}} </td>
         </ng-container>
         <ng-container matColumnDef="Non-Donors">
           <th mat-header-cell *matHeaderCellDef> Non-Donors </th>
