--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -140,7 +140,7 @@
 }
 
 .groupElementSelected{
-    background-color: $color-blue-light; 
+    background-color: rgba(92,184,92, 0.4);
 }
 
 .groupElementDefault{
@@ -148,7 +148,7 @@
 }
 
 .elementSelected{
-    background-color: $color-blue-highlight;
+    background-color: rgba(92,184,92, 0.2);
 }
 
 .elementDefault{
