--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -22,7 +22,7 @@ $color-blue-dark: #0a5caa;
 
 $color-warn: #ea4040;
 $color-very-pale-orange: #ffdfc7;
-$color-success: #5cb85c;
+$color-success: #5cb85c; //rgb(92,184,92)
 
 //Changes size of the material design checkbox (default hw is 20x20) to a medium size checkbox
 //Apply "md-checkbox" as a class on the mat-checkbox element
