Calendar is halfway - starting to hook up API

--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -1,5 +1,8 @@
 @import '~src/appTheme.scss'; 
 
+.clientDropdown{
+    width: 100%;
+}
 
 .defaultButton{
     background-color: $color-blue-default;
@@ -176,7 +179,9 @@
     opacity: 0.75;
 }
 
-
+.inactiveRow{
+    display: none !important;
+}
 
 
 //Sets up font styling resize on year calendar boxes
