--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -1,5 +1,21 @@
 @import '~src/appTheme.scss'; 
 
+.totalsBox{
+    p{
+        font-weight: bold;
+    }
+}
+
+.loading{
+    opacity: 0.4;
+    pointer-events:none;
+}
+
+.loaded{
+    opacity: 1.0;
+    pointer-events: all;
+}
+
 .clientDropdown{
     width: 100%;
 }
