--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -20,8 +20,10 @@ $color-blue-highlight: #e3eff7;
 $color-blue-light: #59a1d3;
 $color-blue-dark: #0a5caa;
 
-$color-warn: #ea4040;
+$color-warn: #ea4040; //rgb(255,223,199)
 $color-very-pale-orange: #ffdfc7;
+$color-bootstrap-yellow: #ffc107; //rgb(255,193,7)
+$color-orange: #f0ad4e; //rgb(240,173,78)
 $color-success: #5cb85c; //rgb(92,184,92)
 
 //Changes size of the material design checkbox (default hw is 20x20) to a medium size checkbox
